// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon theme={theme} should render correctly 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 40px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  color: #545456;
  cursor: inherit;
}

.c0:hover {
  color: #545456;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e957';
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Icon
    name="bitcoin"
    selectable={false}
    size="40px"
    weight={400}
  >
    <Styled(Text)
      code="\\\\e957"
      selectable={false}
      size="40px"
      weight={400}
    >
      <Text
        capitalize={false}
        className="c0"
        code="\\\\e957"
        italic={false}
        opacity={1}
        selectable={false}
        size="40px"
        uppercase={false}
        weight={400}
      >
        <styled.span
          capitalize={false}
          className="c0"
          code="\\\\e957"
          italic={false}
          opacity={1}
          selectable={false}
          size="40px"
          uppercase={false}
          weight={400}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="40px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Icon>
</ThemeProvider>
`;

exports[`Icon theme={theme} should render correctly with name 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 40px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  color: #545456;
  cursor: inherit;
}

.c0:hover {
  color: #545456;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e963';
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Icon
    name="ethereum"
    selectable={false}
    size="40px"
    weight={400}
  >
    <Styled(Text)
      code="\\\\e963"
      selectable={false}
      size="40px"
      weight={400}
    >
      <Text
        capitalize={false}
        className="c0"
        code="\\\\e963"
        italic={false}
        opacity={1}
        selectable={false}
        size="40px"
        uppercase={false}
        weight={400}
      >
        <styled.span
          capitalize={false}
          className="c0"
          code="\\\\e963"
          italic={false}
          opacity={1}
          selectable={false}
          size="40px"
          uppercase={false}
          weight={400}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="40px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Icon>
</ThemeProvider>
`;

exports[`Icon theme={theme} should render correctly with selectable 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 40px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  color: #545456;
  cursor: pointer;
}

.c0:hover {
  color: #757679;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e957';
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Icon
    name="bitcoin"
    selectable={true}
    size="40px"
    weight={400}
  >
    <Styled(Text)
      code="\\\\e957"
      selectable={true}
      size="40px"
      weight={400}
    >
      <Text
        capitalize={false}
        className="c0"
        code="\\\\e957"
        italic={false}
        opacity={1}
        selectable={true}
        size="40px"
        uppercase={false}
        weight={400}
      >
        <styled.span
          capitalize={false}
          className="c0"
          code="\\\\e957"
          italic={false}
          opacity={1}
          selectable={true}
          size="40px"
          uppercase={false}
          weight={400}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="40px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Icon>
</ThemeProvider>
`;

exports[`Icon theme={theme} should render correctly with size 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 72px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  color: #545456;
  cursor: inherit;
}

.c0:hover {
  color: #545456;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e957';
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Icon
    name="bitcoin"
    selectable={false}
    size="72px"
    weight={400}
  >
    <Styled(Text)
      code="\\\\e957"
      selectable={false}
      size="72px"
      weight={400}
    >
      <Text
        capitalize={false}
        className="c0"
        code="\\\\e957"
        italic={false}
        opacity={1}
        selectable={false}
        size="72px"
        uppercase={false}
        weight={400}
      >
        <styled.span
          capitalize={false}
          className="c0"
          code="\\\\e957"
          italic={false}
          opacity={1}
          selectable={false}
          size="72px"
          uppercase={false}
          weight={400}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="72px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Icon>
</ThemeProvider>
`;

exports[`Icon theme={theme} should render correctly with uppercase 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 40px;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  color: #545456;
  cursor: inherit;
}

.c0:hover {
  color: #545456;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e957';
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "#004A7C",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Icon
    name="bitcoin"
    selectable={false}
    size="40px"
    weight={400}
  >
    <Styled(Text)
      code="\\\\e957"
      selectable={false}
      size="40px"
      weight={400}
    >
      <Text
        capitalize={false}
        className="c0"
        code="\\\\e957"
        italic={false}
        opacity={1}
        selectable={false}
        size="40px"
        uppercase={false}
        weight={400}
      >
        <styled.span
          capitalize={false}
          className="c0"
          code="\\\\e957"
          italic={false}
          opacity={1}
          selectable={false}
          size="40px"
          uppercase={false}
          weight={400}
        >
          <span
            className="c0 c1"
            opacity={1}
            size="40px"
          />
        </styled.span>
      </Text>
    </Styled(Text)>
  </Icon>
</ThemeProvider>
`;
